# RAGForge

./: dump.rdb
client/: package-lock.json  package.json
client/src/app/: layout.tsx  page.tsx
client/src/app/(auth)/sign-in/[[...sign-in]]/: page.tsx
client/src/app/(auth)/sign-up/[[...sign-up]]/: page.tsx
client/src/app/(dashboard)/projects/: layout.tsx  page.tsx
client/src/app/(dashboard)/projects/[projectId]/: page.tsx
client/src/app/(dashboard)/projects/[projectId]/chats/[chatId]/: page.tsx
client/src/components/chat/: ChatInterface.tsx  MessageItem.tsx  MessageList.tsx
client/src/components/layout/: Sidebar.tsx
client/src/components/projects/: KnowledgeBaseSidebar.tsx
client/src/lib/api/: index.ts
client/src/lib/types/: index.ts
server/: auth.py  database.py  dump.rdb  main.py  pyproject.toml  tasks.py
server/routers/: chats.py  files.py  projects.py  users.py
server/routes/: database.py
server/supabase/migrations/: 20260304171812_initial_schema.sql  20260304172124_chunk_search_functions.sql
